    correctly.
  * **Fix:** **check_circular_dependency()** now checks if the **entity** and
    the **other_entity** are the same.
  * **Fix:** **Task.to_tjp()** now correctly add the dependent tasks of a
    container task.
  * **Fix:** **Task.__eq__()** now correctly considers the parent, depends and
    children Tasks.

* **WebUI:**

  * **Fix:** GanttChart  view of Assets, Shots,Sequences or Tasks now displays
    only the children and parents of that Task derivative.
  * **Update:** Task create/update dialog now displays the full hierarchy in
    parent/dependent task listings.
  * **Fix:** TimeLog create/update dialog now displays the default times
    correctly when creating a new TimeLog.
  * **Fix:** TimeLog create/update view callables are now checking if there
    will be any OverBookedError raised.
  * **Fix:** Task create/update dialog now will not list the task itself in
    parent and dependent task lists, if the UI is called with a Task instance
    ({{task}} is not None).
  * **Update:** dgrid height is updated to 80em in dgrid.css.
  * **Update:** For Asset Page and Task Page tab order is changed.
  * **New:** Starts and Ends attributes are added to Task Summary Page.
  * **Update:** List of Users, Departments and Groups are now sorted by using
    the name of the entity.
  * **JQueryGantt:**
  
    * **Update:** Context menu can now be opened in task names in grid editor.
    * **Update:** Optimized the creation of task rows.
    * **Update:** Replaced the ``input`` elements with ``div`` in the task row.

0.2.0.b6
========

* **SOM**:
  
  * **Fix:** Fixed **LocalSession._write_data()**, previously it was not
    creating the local session folder.
  * **New:** Added a new method called **LocalSession.delete()** to remove the
    local session file.
  * **Update:** **Link.full_path** can now be set to an empty string. This is
    updated in this way for **Version** class.